--- a/charts/feast/requirements.yaml
+++ b/charts/feast/requirements.yaml
@@ -1,17 +1,20 @@
 dependencies:
 - name: feast-core
-  version: 0.9.0-SNAPSHOT
+  version: 0.9.2
   condition: feast-core.enabled
 - name: feast-serving
   alias: feast-online-serving
-  version: 0.9.0-SNAPSHOT
+  version: 0.9.2
   condition: feast-online-serving.enabled
+- name: feast-jobservice
+  version: 0.9.2
+  condition: feast-jobservice.enabled
 - name: feast-jupyter
-  version: 0.9.0-SNAPSHOT
+  version: 0.9.2
   condition: feast-jupyter.enabled
 - name: postgresql
   version: 8.6.1
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: postgresql.enabled
 - name: kafka 
   version: 11.8.8
@@ -19,16 +22,16 @@ dependencies:
   condition: kafka.enabled
 - name: redis
   version: 10.5.6
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: redis.enabled
 - name: prometheus-statsd-exporter
   version: 0.1.2
   condition: prometheus-statsd-exporter.enabled
 - name: prometheus
   version: 11.0.2
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: prometheus.enabled
 - name: grafana
   version: 5.0.5
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.helm.sh/stable
   condition: grafana.enabled
