--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,3 +2,12 @@ apiVersion: v1
 description: Feature store for machine learning.
 name: feast
 version: 0.9.2
+appVersion: v0.9.2
+keywords:
+  - machine learning
+  - big data
+  - mlops
+home: https://feast.dev/
+sources:
+  - https://github.com/feast-dev/feast
+  - https://github.com/feast-dev/feast-helm-charts
