--- a/charts/feast-core/Chart.yaml
+++ b/charts/feast-core/Chart.yaml
@@ -1,4 +1,10 @@
 apiVersion: v1
-description: Feast Core registers feature specifications.
+description: "Feast Core: Feature registry for Feast."
 name: feast-core
 version: 0.9.2
+appVersion: v0.9.2
+keywords:
+- machine learning
+- big data
+- mlops
+home: https://github.com/feast-dev/feast-java
