--- a/charts/feast-jupyter/Chart.yaml
+++ b/charts/feast-jupyter/Chart.yaml
@@ -1,4 +1,10 @@
 apiVersion: v1
-description: Feast Jupyter provides a Jupyter server with pre-installed Feast SDK
+description: "Feast Jupyter: Jupyter server with pre-installed Feast SDK"
 name: feast-jupyter
 version: 0.9.2
+appVersion: v0.9.2
+keywords:
+- machine learning
+- big data
+- mlops
+home: https://github.com/feast-dev/feast
