--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
 
   publish-helm-charts:
     runs-on:  ubuntu-latest
+    needs: get-version
     env:
       HELM_VERSION: v2.17.0
     steps:
