--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,6 @@ jobs:
       - name: Validate Helm chart prior to publishing
         run: ./scripts/validate-helm-chart-publish.sh
       - name: Validate all version consistency
-        run: ./scripts/validate-helm-chart-versions.sh ${VERSION_WITHOUT_PREFIX}
+        run: ./scripts/validate-helm-chart-versions.sh $VERSION_WITHOUT_PREFIX
 #      - name: Publish Helm charts
 #        run: ./scripts/push-helm-charts.sh
