Fix env var dependency

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Validate Helm chart prior to publishing
         run: ./scripts/validate-helm-chart-publish.sh
       - name: Validate all version consistency
+        env:
+          VERSION_WITHOUT_PREFIX: ${{ needs.get-version.outputs.version_without_prefix }}
         run: ./scripts/validate-helm-chart-versions.sh $VERSION_WITHOUT_PREFIX
 #      - name: Publish Helm charts
 #        run: ./scripts/push-helm-charts.sh
