Enable chart publishing again

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,5 +56,5 @@ jobs:
         env:
           VERSION_WITHOUT_PREFIX: ${{ needs.get-version.outputs.version_without_prefix }}
         run: ./scripts/validate-helm-chart-versions.sh $VERSION_WITHOUT_PREFIX
-#      - name: Publish Helm charts
-#        run: ./scripts/push-helm-charts.sh
+      - name: Publish Helm charts
+        run: ./scripts/push-helm-charts.sh
