--- a/examples/feast-standard/values.yaml
+++ b/examples/feast-standard/values.yaml
@@ -1,7 +1,6 @@
 feast-core:
   # feast-core.enabled -- Flag to install Feast Core
   enabled: true
-  fullnameOverride: kf-feast-core
   postgresql:
     # feast-core.postgresql.existingSecret -- Kubernetes secrets that contains the postgresql password
     existingSecret: feast-postgresql
@@ -11,25 +10,24 @@ feast-core:
 
 feast-online-serving:
   # feast-online-serving.enabled -- Flag to install Feast Online Serving
-  fullnameOverride: feast-online-serving
   enabled: true
   image:
     repository: gcr.io/kf-feast/feast-serving
     tag: develop
 
-  application-override.yaml:
-    feast:
-      core-host: kf-feast-core
-
 feast-jupyter:
   # feast-jupyter.enabled -- Flag to install Feast Jupyter Notebook with SDK
-  enabled: false
+  enabled: true
+  image:
+    repository: gcr.io/kf-feast/feast-jupyter
+    tag: develop
 
 feast-jobservice:
   # feast-jobservice.enabled -- Flag to install Feast Job Service
   image:
     repository: gcr.io/kf-feast/feast-jobservice
-  enabled: false
+    tag: develop
+  enabled: true
 
 postgresql:
   # postgresql.enabled -- Flag to install Postgresql
@@ -39,7 +37,7 @@ postgresql:
 
 kafka:
   # kafka.enabled -- Flag to install Kafka
-  enabled: false
+  enabled: true
 
 redis:
   # redis.enabled -- Flag to install Redis
