--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,11 +1,13 @@
 dependencies:
 - name: feast-core
-  version: 0.9.2
+  version: 0.25.0
   condition: feast-core.enabled
+  repository: https://feast-helm-charts.storage.googleapis.com
 - name: feast-serving
-  alias: feast-online-serving
-  version: 0.9.2
-  condition: feast-online-serving.enabled
+  alias: feast-serving
+  version: 0.25.0
+  condition: feast-serving.enabled
+  repository: https://feast-helm-charts.storage.googleapis.com
 - name: feast-jobservice
   version: 0.9.2
   condition: feast-jobservice.enabled
@@ -24,14 +26,3 @@ dependencies:
   version: 10.5.6
   repository: https://charts.helm.sh/stable
   condition: redis.enabled
-- name: prometheus-statsd-exporter
-  version: 0.1.2
-  condition: prometheus-statsd-exporter.enabled
-- name: prometheus
-  version: 11.0.2
-  repository: https://charts.helm.sh/stable
-  condition: prometheus.enabled
-- name: grafana
-  version: 5.0.5
-  repository: https://charts.helm.sh/stable
-  condition: grafana.enabled
