--- a/charts/feast-jupyter/templates/deployment.yaml
+++ b/charts/feast-jupyter/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
           {{- if .Values.gcpServiceAccount.enabled }}
-          - name: {{ template "chart.fullname" . }}-gcp-service-account
+          - name: {{ template "feast-jupyter.fullname" . }}-gcp-service-account
             mountPath: /etc/secrets/google
             readOnly: true
           {{- end }}
