--- a/charts/feature-server/templates/configmap.yaml
+++ b/charts/feature-server/templates/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "feast-serving.fullname" . }}
+  name: {{ template "feature-server.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "feast-serving.name" . }}
+    app: {{ template "feature-server.name" . }}
     component: serving
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
@@ -13,23 +13,22 @@ data:
   application-generated.yaml: |
 {{- if index .Values "application-generated.yaml" "enabled" }}
     feast:
-      core-host: {{ .Release.Name }}-feast-core
+      registry: {{ .Values.global.registry.path }}
+      registry-refresh-interval: {{ .Values.global.registry.cache_ttl_seconds }}
+      {{- if .Values.transformationService.host }}
+      transformation-service-endpoint: {{ .Values.transformationService.host}}:{{ .Values.transformationService.port }}
+      {{- else }}
+      transformation-service-endpoint: {{ .Release.Name }}-transformation-service:{{ .Values.transformationService.port }}
+      {{- end }}
       
+      active_store: online
       stores:
       - name: online
         type: REDIS 
         config:
           host: {{ .Release.Name }}-redis-master
           port: 6379
-        subscriptions:
-        - name: "*"
-          project: "*"
-          version: "*"
       
-      job_store:
-        redis_host: {{ .Release.Name }}-redis-master
-        redis_port: 6379
-
     server:
       port: {{ .Values.service.http.targetPort }}
 {{- end }}
