--- a/charts/feature-server/templates/secret.yaml
+++ b/charts/feature-server/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "feast-serving.fullname" . }}
+  name: {{ template "feature-server.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "feast-serving.name" . }}
+    app: {{ template "feature-server.name" . }}
     component: serving
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
