--- a/charts/feature-server/templates/service.yaml
+++ b/charts/feature-server/templates/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "feast-core.fullname" . }}
+  name: {{ template "feature-server.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "feast-core.name" . }}
+    app: {{ template "feature-server.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   {{- with .Values.service.annotations }}
   annotations:
-    {{ toYaml . | nindent 4 }}
+{{ toYaml . | indent 4 }}
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
@@ -19,7 +19,7 @@ spec:
   {{- end }}
   {{- if .Values.service.loadBalancerSourceRanges }}
   loadBalancerSourceRanges:
-  {{ toYaml .Values.service.loadBalancerSourceRanges | nindent 2 }}
+{{ toYaml .Values.service.loadBalancerSourceRanges | indent 2 }}
   {{- end }}
   ports:
   - name: http
@@ -35,7 +35,6 @@ spec:
     nodePort: {{ .Values.service.grpc.nodePort }}
     {{- end }}
   selector:
-    app: {{ template "feast-core.name" . }}
-    component: core
+    app: {{ template "feature-server.name" . }}
+    component: serving
     release: {{ .Release.Name }}
-
