--- a/charts/transformation-service/templates/service.yaml
+++ b/charts/transformation-service/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "feast-serving.fullname" . }}
+  name: {{ template "transformation-service.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ template "feast-serving.name" . }}
+    app: {{ template "transformation-service.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -14,20 +14,7 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
-  {{- if .Values.service.loadBalancerSourceRanges }}
-  loadBalancerSourceRanges:
-{{ toYaml .Values.service.loadBalancerSourceRanges | indent 2 }}
-  {{- end }}
   ports:
-  - name: http
-    port: {{ .Values.service.http.port }}
-    targetPort: {{ .Values.service.http.targetPort }}
-    {{- if .Values.service.http.nodePort }}
-    nodePort: {{ .Values.service.http.nodePort }}
-    {{- end }}
   - name: grpc
     port: {{ .Values.service.grpc.port }}
     targetPort: {{ .Values.service.grpc.targetPort }}
@@ -35,6 +22,6 @@ spec:
     nodePort: {{ .Values.service.grpc.nodePort }}
     {{- end }}
   selector:
-    app: {{ template "feast-serving.name" . }}
+    app: {{ template "transformation-service.name" . }}
     component: serving
     release: {{ .Release.Name }}
