--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,27 +1,14 @@
 dependencies:
-- name: feast-core
-  version: 0.25.0
-  condition: feast-core.enabled
+- name: feature-server
+  alias: feature-server
+  version: 0.15.0
+  condition: feature-server.enabled
   repository: https://feast-helm-charts.storage.googleapis.com
-- name: feast-serving
-  alias: feast-serving
-  version: 0.25.0
-  condition: feast-serving.enabled
+- name: transformation-service
+  alias: transformation-service
+  version: 0.15.0
+  condition: transformation-service.enabled
   repository: https://feast-helm-charts.storage.googleapis.com
-- name: feast-jobservice
-  version: 0.9.2
-  condition: feast-jobservice.enabled
-- name: feast-jupyter
-  version: 0.9.2
-  condition: feast-jupyter.enabled
-- name: postgresql
-  version: 8.6.1
-  repository: https://charts.helm.sh/stable
-  condition: postgresql.enabled
-- name: kafka 
-  version: 11.8.8
-  repository: https://charts.bitnami.com/bitnami/
-  condition: kafka.enabled
 - name: redis
   version: 10.5.6
   repository: https://charts.helm.sh/stable
