change userid to 2000 so pods don't run as root
Signed-off-by: Zach Bloss <zachbloss@rockcentraldetroit.com>

--- a/charts/feature-server/templates/deployment.yaml
+++ b/charts/feature-server/templates/deployment.yaml
@@ -51,6 +51,8 @@ spec:
       - name: {{ .Chart.Name }}
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+          runAsUser: 2000
 
         volumeMounts:
         - name: {{ template "feature-server.fullname" . }}-config
